Fixed Spacing on contact me for mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -115,4 +115,8 @@
     .text-container {
         text-align: justify;
     }
+
+    .linkedin-icon {
+        padding-left: 0.5em;
+    }
 }
