--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,6 @@ article .icon {
 
 .contact-info-container p {
     font-size: larger;
-    padding: 0.3em;
 }
 
 .contact-icon {
